services for payment, inventory and orders

--- a/shared/api/order/v1/components/enums/payment_method.yaml
+++ b/shared/api/order/v1/components/enums/payment_method.yaml
@@ -1,24 +1,8 @@
 type: string
 enum: 
-  - UNKNOWN
-  - CARD
-  - SBP
-  - CREDIT_CARD
-  - INVESTOR_MONEY
+  - PAYMENT_METHOD_UNKNOWN
+  - PAYMENT_METHOD_CARD
+  - PAYMENT_METHOD_SBP
+  - PAYMENT_METHOD_CREDIT_CARD
+  - PAYMENT_METHOD_INVESTOR_MONEY
 description: Метод оплаты
-x-enum-vars:
-  - name: UNKNOWN
-    value: 0
-    description: Неизвестный способ
-  - name: CARD
-    value: 1
-    description: Банковская карта
-  - name: SBP
-    value: 2
-    description: Система быстрых платежей
-  - name: CREDIT_CARD
-    value: 3
-    description: Кредитная карта
-  - name: INVESTOR_MONEY
-    value: 4
-    description: Деньги инвестора
