make pure architecture

--- a/shared/api/order/v1/components/enums/payment_method.yaml
+++ b/shared/api/order/v1/components/enums/payment_method.yaml
@@ -1,6 +1,6 @@
 type: string
 enum: 
-  - PAYMENT_METHOD_UNKNOWN
+  - PAYMENT_METHOD_UNKNOWN_UNSPECIFIED
   - PAYMENT_METHOD_CARD
   - PAYMENT_METHOD_SBP
   - PAYMENT_METHOD_CREDIT_CARD
