--- a/.github/workflows/test-coverage-reusable.yml
+++ b/.github/workflows/test-coverage-reusable.yml
@@ -33,6 +33,9 @@ jobs:
         uses: actions/setup-go@v5.4.0
         with:
           go-version: ${{ inputs.go-version }}
+      
+      - name: Fix go paths
+        run: export GOTOOLDIR="$(go env GOROOT)/pkg/tool/linux_amd64"
 
       - name: 📌 Install Task
         uses: arduino/setup-task@v2.0.0
@@ -44,7 +47,6 @@ jobs:
 
       - name: 📊 Extract coverage percent
         run: |
-          export GOTOOLDIR="$(go env GOROOT)/pkg/tool/linux_amd64"
           # Выводим последнюю строку с total и заменяем табы на пробелы
           COVERAGE_OUTPUT=$(go tool cover -func=${COVERAGE_DIR}/${COVERAGE_FILE} | tail -1)
           echo "Raw coverage output: $COVERAGE_OUTPUT"
